update: GetAssignedForms
