# docs/swagger.yaml
@@ -120,10 +120,37 @@ paths:
       summary: 获取单个换宿申请表格
       tags:
       - form
+  /forms/assigned:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.Resp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Resp'
+      summary: 获取分配给指定角色的换宿申请表格
+      tags:
+      - form
   /forms/check:
     post:
       consumes:
       - application/json
+      description: |-
+        opt: 0 for waiting, 1 for teacher approve, -1 for teacher reject, 2 for school approve, -2 for school reject
+        if role < abs(opt), permission denied
       parameters:
       - description: token
         in: header
